--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,4 +28,4 @@ jobs:
         pip install -r backend/requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python backend/manage.py test
