--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,6 +24,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
+        export APP_DEVELOPMENT=True
         python -m pip install --upgrade pip
         pip install -r backend/requirements.txt
     - name: Run Tests
