--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   build:
-
+    env:
+      APP_DEVELOPMENT: True
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -24,7 +25,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        export APP_DEVELOPMENT=True
         python -m pip install --upgrade pip
         pip install -r backend/requirements.txt
     - name: Run Tests
