--- a/we_sweat/pubspec.yaml
+++ b/we_sweat/pubspec.yaml
@@ -30,6 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hexagon: ^0.2.0
+  provider: ^6.1.1
+  flutter_secure_storage: ^9.0.0
+  hive_flutter: ^1.1.0
+  http: ^1.1.0
+  google_fonts: ^6.1.0
+  fluttermoji: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
