--- a/we_sweat/pubspec.yaml
+++ b/we_sweat/pubspec.yaml
@@ -37,11 +37,15 @@ dependencies:
   http: ^1.1.0
   google_fonts: ^6.1.0
   fluttermoji: ^1.0.2
+  health: ^8.0.0
+  permission_handler: ^11.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.22.0
+  firebase_messaging: ^14.7.4
 
 dev_dependencies:
   flutter_test:
