--- a/we_sweat/pubspec.yaml
+++ b/we_sweat/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttermoji: ^1.0.2
   health: ^8.0.0
   permission_handler: ^11.0.1
+  cloud_functions: ^4.5.4
 
 
   # The following adds the Cupertino Icons font to your application.
