--- a/we_sweat/android/app/build.gradle
+++ b/we_sweat/android/app/build.gradle
@@ -24,8 +24,13 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.we_sweat"
-    compileSdkVersion flutter.compileSdkVersion
+    namespace = "com.google.android.apps.healthdata"
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
+
+    if (project.android.hasProperty("namespace")) {
+         namespace("com.example.we_sweat")
+     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -45,7 +50,7 @@ android {
         applicationId "com.example.we_sweat"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 28
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
