--- a/we_sweat/pubspec.yaml
+++ b/we_sweat/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.22.0
   firebase_messaging: ^14.7.4
+  google_maps_flutter: ^2.5.0
+  geolocator: ^10.1.0
+  shared_preferences: ^2.2.2
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
